--- a/src/components/TodoGenerator.css
+++ b/src/components/TodoGenerator.css
@@ -1,10 +1,18 @@
 .todo-generator-wrapper {
-  width: 300px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 
   input {
-    width: 250px;
+    width: 300px;
     height: 24px;
+    margin-right: 10px;
+  }
+
+  button {
+    background-color: cornflowerblue;
+    color: white;
+    border: none;
+    width: 60px;
+    height: 28px;
   }
 }
